development/gogs.yml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  labels:
    app: gogs
  name: gogs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gogs
  template:
    metadata:
      labels:
        app: gogs
    spec:
      containers:
        - image: "gogs/gogs:0.11.34"
          name: nextcloud
          ports:
            - containerPort: 22
            - containerPort: 3000
          volumeMounts:
            - mountPath: /data
              name: gogs-data-volume
      volumes:
        - name: gogs-data-volume
          persistentVolumeClaim:
            claimName: gogs-data-pvc
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: gogs-mariadb
  labels:
    app: gogs-mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gogs-mariadb
  template:
    metadata:
      labels:
        app: gogs-mariadb
    spec:
      containers:
        - name: gogs-mariadb
          image: mariadb:10.3
          volumeMounts:
            - name: mariadb-data-volume
              mountPath: /var/lib/mysql
          ports:
            - containerPort: 3306
      volumes:
        - name: mariadb-data-volume
          persistentVolumeClaim:
            claimName: gogs-mariadb-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: gogs-service
spec:
  selector:
    app: gogs
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
    - name: ssh
      protocol: TCP
      port: 22
      targetPort: 22
  type: LoadBalancer
  loadBalancerIP: 192.168.1.245
---
apiVersion: v1
kind: Service
metadata:
  name: gogs-mariadb-service
spec:
  selector:
    app: gogs-mariadb
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
