development/nextcloud.yml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  labels:
    app: nextcloud
  name: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      containers:
        - image: "linuxserver/nextcloud:112"
          name: nextcloud
          ports:
            - containerPort: 443
          volumeMounts:
            - mountPath: /data
              name: nextcloud-data-volume
            - mountPath: /config
              name: nextcloud-config-volume
      volumes:
        - name: nextcloud-data-volume
          persistentVolumeClaim:
            claimName: nextcloud-data-pvc
        - name: nextcloud-config-volume
          persistentVolumeClaim:
            claimName: nextcloud-config-pvc
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: nextcloud-mariadb
  labels:
    app: nextcloud-mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud-mariadb
  template:
    metadata:
      labels:
        app: nextcloud-mariadb
    spec:
      containers:
        - name: nextcloud-mariadb
          image: mariadb:10.3
          volumeMounts:
            - name: mariadb-data-volume
              mountPath: /var/lib/mysql
          ports:
            - containerPort: 3306
      volumes:
        - name: mariadb-data-volume
          persistentVolumeClaim:
            claimName: nextcloud-mariadb-pvc
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: nextcloud-elasticsearch
  labels:
    app: nextcloud-elasticsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud-elasticsearch
  template:
    metadata:
      labels:
        app: nextcloud-elasticsearch
    spec:
      containers:
        - name: nextcloud-elasticsearch
          image: elasticsearch:5.6.8
          volumeMounts:
            - name: nextcloud-elasticsearch-data-volume
              mountPath: /usr/share/elasticsearch/data
            - name: nextcloud-elasticsearch-plugins-volume
              mountPath: /usr/share/elasticsearch/plugins
          ports:
            - containerPort: 9200
            - containerPort: 9300
      volumes:
        - name: nextcloud-elasticsearch-data-volume
          persistentVolumeClaim:
            claimName: nextcloud-elasticsearch-data-pvc
        - name: nextcloud-elasticsearch-plugins-volume
          persistentVolumeClaim:
            claimName: nextcloud-elasticsearch-plugins-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-service
spec:
  selector:
    app: nextcloud
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
  type: LoadBalancer
  loadBalancerIP: 192.168.1.244
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-mariadb-service
spec:
  selector:
    app: nextcloud-mariadb
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-elasticsearch-service
spec:
  selector:
    app: nextcloud-elasticsearch
  ports:
    - protocol: TCP
      port: 9200
      targetPort: 9200
